Support for heartbeats
Model change
