# models/heartbeat_configuration.go
@@ -1,0 +1,74 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// HeartbeatConfiguration heartbeat configuration
+//
+// swagger:model heartbeat-configuration
+type HeartbeatConfiguration struct {
+
+	// hardware profile
+	HardwareProfile *HardwareProfileConfiguration `json:"hardware_profile,omitempty"`
+
+	// period seconds
+	PeriodSeconds int64 `json:"period_seconds,omitempty"`
+}
+
+// Validate validates this heartbeat configuration
+func (m *HeartbeatConfiguration) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateHardwareProfile(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *HeartbeatConfiguration) validateHardwareProfile(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.HardwareProfile) { // not required
+		return nil
+	}
+
+	if m.HardwareProfile != nil {
+		if err := m.HardwareProfile.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("hardware_profile")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HeartbeatConfiguration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HeartbeatConfiguration) UnmarshalBinary(b []byte) error {
+	var res HeartbeatConfiguration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
